Adds custom theme for chicocode.io

--- a/src/components/Container/index.css
+++ b/src/components/Container/index.css
@@ -1,5 +1,9 @@
-.container {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.wrap {
+  @media (--small) {
+  	width: 100%;
+  }
+  @media (--large) {
+  	width: 700px;
+    margin: 0 auto;
+  }
 }
