--- a/src/components/PagePreview/index.css
+++ b/src/components/PagePreview/index.css
@@ -1,33 +1,24 @@
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  max-width: 40rem;
-  margin: 1rem auto;
-  padding: 1rem 0;
-}
-
 .title {
-  align-self: center;
-  font-size: 1.2rem;
-  font-weight: 900;
+  margin: 0.65em 0;
+  color: var(--text);
+  font-size: 1.5em;
 }
 
-.meta {
-  font-size: 0.75rem;
-  opacity: 0.6;
+.link {
+   &:hover {
+    border-bottom: 2px solid var(--color);
+  }
 }
 
-.description {
-  font-size: 0.85rem;
+.info {
+  color: var(--neutral);
+  margin: 1.2em 0;
+}
+
+.info span {
+  margin-left: 0.5rem;
 }
 
 .readMore {
-  /* align-self: center; */
-  display: inline-flex;
-  margin-top: 1rem;
-  border-radius: 3px;
-  font-size: 0.8rem;
-  text-align: center;
-  border-bottom: 0 !important;
-  text-decoration: none !important;
+  color: var(--color);
 }
