--- a/src/highlight.global.css
+++ b/src/highlight.global.css
@@ -1,104 +1,110 @@
+code,
+pre {
+  font-size: .91em;
+  background-color: #f8f8f8;
+  font-family: 'Roboto Mono', Monaco, courier, monospace;
+}
+
+pre {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.125);
+  padding: .5em .7em;
+  margin: 0;
+}
+
+code {
+  color: #525252;
+  margin: 1em 0;
+  border-radius: 2px;
+  line-height: 1.7em;
+  position: relative;
+  background-color: #f8f8f8;
+  overflow: hidden;
+  width: auto;
+  display: block;
+  &:after {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    color: #ccc;
+    text-align: right;
+    font-size: 0.93em;
+    padding-right: 10px;
+    line-height: 15px;
+    height: 15px;
+    font-weight: 600;
+  }
+}
+
+.hljs.language-diff:after {
+	content: "DIFF";
+}
+
+.hljs.language-js:after { content: "JS"; }
+.hljs.language-cs:after { content: "C#" }
+.hljs.language-fs:after { content: "F#" }
+.hljs.language-haskell:after { content: "HASKELL" }
+.hljs.language-html:after { content: "HTML" }
+.hljs.language-css:after { content: "CSS" }
+.hljs.language-bash:after { content: "BASH" }
+
 /**
- * You can try all official Highlight.js theme here
- *
- * https://highlightjs.org/static/demo/
- *
- * More themes here
- *
- * https://github.com/isagalaev/highlight.js/tree/master/src/styles
+ * GitHub Gist Theme
+ * Author : Louis Barranqueiro - https://github.com/LouisBarranqueiro
  */
 
-/*
-
-Atom One Dark by Daniel Gamage
-Original One Dark Syntax theme from https://github.com/atom/one-dark-syntax
-
-base:    #282c34
-mono-1:  #abb2bf
-mono-2:  #818896
-mono-3:  #5c6370
-hue-1:   #56b6c2
-hue-2:   #61aeee
-hue-3:   #c678dd
-hue-4:   #98c379
-hue-5:   #e06c75
-hue-5-2: #be5046
-hue-6:   #d19a66
-hue-6-2: #e6c07b
-
-*/
-
-.hljs {
-  display: block;
-  overflow-x: auto;
-  padding: 0.5em;
-  color: #abb2bf;
-  background: #282c34;
-}
-
 .hljs-comment,
-.hljs-quote {
-  color: #5c6370;
-  font-style: italic;
-}
-
-.hljs-doctag,
-.hljs-keyword,
-.hljs-formula {
-  color: #c678dd;
-}
-
-.hljs-section,
-.hljs-name,
-.hljs-selector-tag,
-.hljs-deletion,
-.hljs-subst {
-  color: #e06c75;
-}
-
-.hljs-literal {
-  color: #56b6c2;
+.hljs-meta {
+  color: #969896;
 }
 
 .hljs-string,
-.hljs-regexp,
-.hljs-addition,
-.hljs-attribute,
-.hljs-meta-string {
-  color: #98c379;
-}
-
-.hljs-built_in,
-.hljs-class .hljs-title {
-  color: #e6c07b;
-}
-
-.hljs-attr,
 .hljs-variable,
 .hljs-template-variable,
-.hljs-type,
-.hljs-selector-class,
-.hljs-selector-attr,
-.hljs-selector-pseudo,
-.hljs-number {
-  color: #d19a66;
+.hljs-strong,
+.hljs-emphasis,
+.hljs-quote {
+  color: #F27649;
 }
 
+.hljs-keyword,
+.hljs-selector-tag,
+.hljs-type {
+  color: #D43896;
+}
+
+.hljs-literal,
 .hljs-symbol,
 .hljs-bullet,
-.hljs-link,
-.hljs-meta,
+.hljs-attribute {
+  color: #0086b3;
+}
+
+.hljs-section,
+.hljs-name {
+  color: #14A697;
+}
+
+.hljs-tag {
+  color: #333333;
+}
+
+.hljs-title,
+.hljs-attr,
 .hljs-selector-id,
-.hljs-title {
-  color: #61aeee;
+.hljs-selector-class,
+.hljs-selector-attr,
+.hljs-selector-pseudo {
+  color: #8133C9;
 }
 
-.hljs-emphasis {
-  font-style: italic;
+.hljs-addition {
+  color: #14A697;
+  background-color: #eaffea;
 }
 
-.hljs-strong {
-  font-weight: bold;
+.hljs-deletion {
+  color: #FF5656;
+  background-color: #ffecec;
 }
 
 .hljs-link {
