--- a/src/layouts/PageError/index.css
+++ b/src/layouts/PageError/index.css
@@ -10,12 +10,58 @@
 .oops {
   font-size: 4rem;
   line-height: 4rem;
-  color: #ddd;
+  background: -webkit-linear-gradient(#14A697, #F2C12E, #F29D35, #F27649, #F25252);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.description {
+  font-family: 'cabana';
+  font-size: 3rem;
+  text-align: center;
+  &:hover {
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+  }
+}
+
+.actions {
+  text-align: center;
 }
 
 .title {
   margin: 4rem 0;
-  font-size: 2rem;
+  font-size: 5.5rem;
   line-height: 3rem;
   text-align: center;
+  font-family: 'cabana';
+  @media (--small) {
+    font-size: 5rem;
+  }
+  &:hover {
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+  }
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
