--- a/src/components/Button/index.css
+++ b/src/components/Button/index.css
@@ -1,48 +1,14 @@
 .button {
-  display: inline-flex;
-  padding: 0 1rem;
-  line-height: 2rem;
-  font-weight: 100;
-  text-align: center;
-  border-radius: 3px;
-
-  transition: .2s all;
-
-  color: var(--colorPrimary);
-  border: 1px solid var(--colorPrimary);
-  background: color(var(--colorNeutralLight) a(0.2));
+  display: inline-block;
+  margin: 0 4px;
+  padding: 4px 12px;
+  border-radius: 4px;
+  border-bottom: 4px solid var(--colorShadow);
+  font-size: 14px;
+  color: #fff;
+  background-color: var(--color);
 
   &:hover {
-    text-decoration: none;
-    color: var(--colorPrimaryDark);
-    border: 1px solid var(--colorPrimaryDark);
+    background-color: var(--colorShadowHover);
   }
-}
-
-.secondary {
-  color: var(--colorSecondary);
-  border: 1px solid var(--colorSecondary);
-
-  &:hover {
-    color: var(--colorSecondaryDark);
-    border: 1px solid var(--colorSecondaryDark);
-  }
-}
-
-.light {
-  color: var(--colorNeutralLight);
-  border: 1px solid var(--colorNeutralLight);
-
-  &:hover {
-    color: var(--colorNeutralLight);
-    border: 1px solid var(--colorNeutralLight);
-    background: color(var(--colorNeutralLight) a(0.3));
-  }
-}
-
-
-.big {
-  font-size: 1.5rem;
-  padding: 0 2rem;
-  line-height: 3rem;
 }
