--- a/src/components/Content/index.css
+++ b/src/components/Content/index.css
@@ -1,6 +1,7 @@
-.content {
-  flex: 1 1 auto;
-  display: flex;
-  align-items: stretch;
-  flex-direction: column;
+.container {
+  margin: 2em 10px;
+
+  @media (--small) {
+    margin-top: 0;
+  }
 }
