--- a/src/components/Loading/index.css
+++ b/src/components/Loading/index.css
@@ -6,7 +6,7 @@
 }
 
 :root {
-  --spinner-Color: #000;
+  --spinner-Color: #F29D35;
   --spinner-Color-front: color(var(--spinner-Color) a(0.8));
   --spinner-Color-back: color(var(--spinner-Color) a(0.2));
 }
