--- a/src/layouts/Post/index.css
+++ b/src/layouts/Post/index.css
@@ -1,7 +1,35 @@
-.header {
-  display: flex;
-  justify-content: center;
-  opacity: 0.6;
-  font-size: 0.8rem;
-  margin-bottom: 1rem;
+.block .title {
+  margin: 0.65em 0;
+  color: var(--text);
+  font-size: 1.5em;
+}
+
+.block .info span {
+  margin-left: 0.5rem;
+}
+
+.content h2, .content h3, .content h4, .content h5, .content h6 {
+  position: relative;
+  margin: 1em 0;
+}
+.content h4 a:before, .content h5 a:before, .content h6 a:before {
+  content: "";
+}
+.content h2, .content h3 {
+  font-size: 22px;
+}
+.content h4, .content h5, .content h6 {
+  font-size: 18px;
+}
+.content a {
+  color: var(--color);
+  word-break: break-all;
+  &:hover {
+    color: var(--colorSecondary)
+  }
+}
+.content blockquote {
+  margin: 2em 0;
+  padding-left: 20px;
+  border-left: 4px solid var(--color);
 }
