--- a/src/index.global.css
+++ b/src/index.global.css
@@ -16,6 +16,24 @@
   background-color: var(--color);
 }
 
+::-webkit-scrollbar-track
+ {
+ 	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.3);
+ 	background-color: #F5F5F5;
+ }
+
+::-webkit-scrollbar
+ {
+ 	height: .4em;
+  width: .5em;
+ 	background-color: #F5F5F5;
+ }
+
+::-webkit-scrollbar-thumb
+ {
+ 	background-color: var(--neutral);
+ }
+
 html, body {
   width: 100%;
   height: 100%;
