--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -15,9 +15,10 @@
   font-family: 'cabana';
   letter-spacing: 3pt;
   display: inline-block;
-  padding: 7px 0px;
+  padding-top: 6.5px;
+  margin-left: -15px;
   font-weight: bold;
-  font-size: 28px;
+  font-size: 32px;
 
   @media (--small) {
     float: none;
