--- a/src/markdown.global.css
+++ b/src/markdown.global.css
@@ -27,7 +27,9 @@ h6 a.phenomic-HeadingAnchor {
     display: block;
     max-width: 100%;
     margin: 1em auto;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    &:not(.no-shadow) {
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
 }
 
 .phenomic-BodyContainer img.no-style {
