--- a/src/highlight.global.css
+++ b/src/highlight.global.css
@@ -64,13 +64,13 @@ code {
 .hljs-strong,
 .hljs-emphasis,
 .hljs-quote {
-  color: #F27649;
+  color: #8C4646;
 }
 
 .hljs-keyword,
 .hljs-selector-tag,
 .hljs-type {
-  color: #D43896;
+  color: #DE264C;
 }
 
 .hljs-literal,
@@ -95,7 +95,7 @@ code {
 .hljs-selector-class,
 .hljs-selector-attr,
 .hljs-selector-pseudo {
-  color: #8133C9;
+  color: #0D81AB;
 }
 
 .hljs-addition {
