Changes theme to pink and remove image post was causing noisy

--- a/src/layouts/PageError/index.css
+++ b/src/layouts/PageError/index.css
@@ -8,7 +8,7 @@
 }
 
 .oops {
-  background: -webkit-linear-gradient(#14A697, #F2C12E, #F29D35, #F27649, #F25252);
+  background: -webkit-linear-gradient(#F6B1C3, #F0788C, #DE264C, #BC0D35, #A20D1E);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
