--- a/src/markdown.global.css
+++ b/src/markdown.global.css
@@ -15,6 +15,24 @@ h6 a.phenomic-HeadingAnchor {
   }
 }
 
+.phenomic-BodyContainer ul {  
+    margin: 0.75em 0;  
+    padding: 0 1em;  
+    list-style: none;  
+}  
+
+.phenomic-BodyContainer ul li:not(.task-list-item):before {   
+    content: "";  
+    border-color: transparent var(--text);  
+    border-style: solid;  
+    border-width: 0.25em 0 0.25em 0.35em;  
+    display: block;  
+    height: 0;  
+    width: 0;  
+    left: -1em;  
+    top: 1em;  
+    position: relative;  
+} 
 .phenomic-BodyContainer {
   padding-top: 0.6em;
 }
