--- a/src/index.global.css
+++ b/src/index.global.css
@@ -7,33 +7,6 @@
 }
 
 @font-face {
-  font-family: 'brandon';
-  src: url('./components/font/brandon_light.otf') format('opentype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'brandon';
-  src: url('./components/font/brandon_bld.otf') format('opentype');
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'brandon';
-  src: url('./components/font/brandon_bld_it.otf') format('opentype');
-  font-weight: bold;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'brandon';
-  src: url('./components/font/brandon_light_it.otf') format('opentype');
-  font-style: italic;
-}
-
-@font-face {
   font-family: 'cabana';
   src: url('./components/font/cabana-regular.otf') format('opentype');
 }
@@ -78,7 +51,7 @@ body {
   line-height: 1.6;
   background-color: #fff;
   position:relative;
-  font-family: 'brandon', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'sourcesanspro', 'Helvetica Neue', Arial, sans-serif;
 }
 
 ul {
