--- a/src/markdown.global.css
+++ b/src/markdown.global.css
@@ -21,18 +21,11 @@ h6 a.phenomic-HeadingAnchor {
     list-style: none;  
 }  
 
-.phenomic-BodyContainer ul li:not(.task-list-item):before {   
-    content: "";  
-    border-color: transparent var(--text);  
-    border-style: solid;  
-    border-width: 0.25em 0 0.25em 0.35em;  
-    display: block;  
-    height: 0;  
-    width: 0;  
-    left: -1em;  
-    top: 1em;  
-    position: relative;  
+.phenomic-BodyContainer ul li{   
+    list-style: disc;
+    margin-left: 20px;
 } 
+
 .phenomic-BodyContainer {
   padding-top: 0.6em;
 }
@@ -46,7 +39,7 @@ h6 a.phenomic-HeadingAnchor {
     max-width: 100%;
     margin: 1em auto;
     &:not(.no-shadow) {
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      box-shadow: 45px 25px 168px -62px rgba(0,0,0,0.75);
     }
 }
 
