--- a/src/index.global.css
+++ b/src/index.global.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Grand+Hotel');
+@import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';
+
 @font-face {
   font-family: 'sourcesanspro';
   src: url('./components/font/sourcesanspro.woff2') format('woff2'),
@@ -46,12 +49,12 @@ html, body {
 
 body {
   margin: 0;
-  color: #34495e;
+  color: #555;
   font-size: 18px;
   line-height: 1.6;
   background-color: #fff;
   position:relative;
-  font-family: 'sourcesanspro', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Roboto', 'Helvetica Neue', Arial, sans-serif;
 }
 
 ul {
