--- a/src/index.global.css
+++ b/src/index.global.css
@@ -1,3 +1,4 @@
+@import '../node_modules/css-emojis/emojis.min.css';
 @import url('https://fonts.googleapis.com/css?family=Grand+Hotel');
 @import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';
 
